[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.4"
noto-sans-mono-bitmap = "0.2.0"
log = "0.4.20"

volatile = "0.3.0"
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]